--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "react": "^19.0.0",
